# StageEnvironments

./: CMakeLists.txt  README.md  package.xml
launch/: stage_map.launch  stage_robot.launch
scripts/: start_simulation.py
